...
                                            <constraint firstAttribute="width" constant="170" id="PPR-8m-tlk"/>
                                            <constraint firstItem="LPh-sO-EuZ" firstAttribute="top" secondItem="PnY-pX-Gwu" secondAttribute="top" constant="20" id="UWP-HI-C0o"/>
                                        </constraints>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8UP-wU-xmj">
                                        <rect key="frame" x="148" y="220" width="46" height="41"/>
                                        <accessibility key="accessibilityConfiguration" identifier="seatLayoutPopUp"/>
                                        <fontDescription key="fontDescription" name="Sarabun" family="Sarabun" pointSize="22"/>
                                        <state key="normal" title="Layout">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="showLayoutButton:" destination="PPN-Wq-gpx" eventType="touchUpInside" id="9gj-t1-eQZ"/>
...
                                            <constraint firstAttribute="height" constant="20" id="UIR-f5-Xyh"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="William Knottenbelt" borderStyle="roundedRect" placeholder="Cardholder's name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S99-sV-s4I" customClass="DetailTextField" cust
                                        <rect key="frame" x="0.0" y="28.5" width="343" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1234 5678 XXXX XXXX " borderStyle="roundedRect" placeholder="Card Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3g7-e4-cb6" customClass="DetailTextField" customMod
                                        <rect key="frame" x="0.0" y="66.5" width="343" height="30"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="qt1-a7-ThX">
                                        <rect key="frame" x="0.0" y="104.5" width="343" height="30"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="12/20" borderStyle="roundedRect" placeholder="MM/YY" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lPa-br-eR1" customClass="DetailTextField" customModule="Aventus"
                                                <rect key="frame" x="0.0" y="0.0" width="163.5" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="XXX" borderStyle="roundedRect" placeholder="CVV" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UNl-Zv-fay" customClass="DetailTextField" customModule="Aventus" cus
                                                <rect key="frame" x="179.5" y="0.0" width="163.5" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QGW-mk-EOG">
                                        <rect key="frame" x="0.0" y="5" width="80" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="40" id="GSf-ts-Heg"/>
                                            <constraint firstAttribute="height" constant="40" id="jow-ft-UxX"/>
                                        </constraints>
                                        <state key="normal" image="homeIcon"/>
                                        <connections>
                                            <action selector="goHome:" destination="BI1-Lz-PkS" eventType="touchUpInside" id="Vj3-5j-iXw"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a1f-bZ-8Ex">
                                        <rect key="frame" x="80" y="0.0" width="80" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="50" id="LH9-0V-z2c"/>
                                            <constraint firstAttribute="height" constant="50" id="njC-Zh-hTs"/>
                                        </constraints>
                                        <state key="normal" image="ticketIcon"/>
                                        <connections>
                                            <action selector="goViewTicket:" destination="BI1-Lz-PkS" eventType="touchUpInside" id="dEc-Hd-V9f"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
