...
        super.viewDidLoad()
        
         textfieldWidth = Int(self.view.frame.width) - (sideMargin*2)

        menuButton.frame = CGRect(x: 0 + sideMargin, y: topMargin, width: buttonSize, height: buttonSize)
        //menuButton.addTarget(self, action: #selector(openMenu), for:    .touchUpInside)
        menuButton.setImage(UIImage(named: "menu"), for: UIControlState())
        menuButton.tintColor = .white
        
        self.view.addSubview(menuButton)
        
        searchButton.frame = CGRect(x: Int(self.view.frame.width) - sideMargin, y: topMargin, width: buttonSize, height: buttonSize)
        searchButton.addTarget(self, action: #selector(showSearchBarView), for:    .touchUpInside)
...
        menuView.backgroundColor = colors.greyBg
        
        
        helpButton.frame = CGRect(x: sideMargin/2, y: (Int(self.view.frame.height/2) - 20) , width: buttonSize, height: buttonSize)
        helpButton.addTarget(self, action: #selector(navHelp), for:    .touchUpInside)
        helpButton.setImage(UIImage(named: "search"), for: UIControlState())
        helpButton.setTitle("Help", for: UIControlState())
        
        ticketButton.frame = CGRect(x: sideMargin/2, y: (Int(self.view.frame.height/2) + 20), width: buttonSize, height: buttonSize)
        ticketButton.addTarget(self, action: #selector(navTicket), for:    .touchUpInside)
        ticketButton.setImage(UIImage(named: "search"), for: UIControlState())

        
...
